<resources>
    <string name="app_name"> CASI REGISTER </string>
    <string name="sectionn_mainheading">Section N: Section N</string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="region">REGION</string>
    <string name="district">DISTRICT</string>
    <string name="uc">UC</string>
    <string name="cityVillage">City / Village</string>
    <string name="childScreening">Child Screening</string>
    <string name="childFollowup">Child Follow-up</string>
    <string name="wraScreening">WRAs Screening</string>
    <string name="wraFollowup">WRAs Follow-up</string>
    <string name="btnSave">Save</string>
    <string name="signin">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="country">Country (Click to change)</string>
    <string name="pakistan">Pakistan</string>
    <string name="tajikistan">Tajikistan</string>
    <string name="btnLogin">Login</string>
    <string name="btnDownloadData">Download Data</string>
    <string name="elc7">گھراڻي جي انٽريو جو نتيجو (جيڪڏھن انٽريو مڪمل نه  ٿيو ھجي ته  صحيع آپشن لاءِ سپروائزر سان مشورو ڪريو)</string>
    <string name="elc701">مڪمل ٿيو </string>
    <string name="elc702">گھر ۾ ڪوبه ماڻھو يا صحيع انٽريو ڏيڻ وارو ماڻھو موجود نه  آھي </string>
    <string name="elc703">گھراڻي جا فرد ڊگھي عرصي لاءِ گھر مان غير حاضر ھئا </string>
    <string name="elc704">انٽرويو ڏيڻ کان انڪار ڪيو ويو </string>
    <string name="elc705">گھر خالي آھي غير رھائشي آھي </string>
    <string name="elc706">گھر نه  مليو </string>
    <string name="elc707">5 سالن کان گهٽ عمر جو ٻار نه آهي </string>
    <string name="elc708">گھر عارضي طور بند آھي </string>
    <string name="elc796"> ٻيو ڪجهه (وضاحت ڪريو)</string>
    <string name="elc801">گھر ڀاتين جو ٽوٽل تعداد</string>
    <string name="elc802">مرد</string>
    <string name="elc803">عورتون</string>
    <string name="elc804"> 0 کان 28 ڏينهن جا نوان ڄاول ٻار </string>
    <string name="elc805">هڪ مهيني کان 5 سالن جا ٻار </string>
    <string name="elc806"> 5 کان 14 سالن جا ٻار </string>
    <string name="elc807"> 15 کان 49 سالن  واريون غير شادي شده عورتون </string>
    <string name="elc808"> 15 کان 49 سالن  واريون شادي شده عورتون </string>
    <string name="cr_tittle">Central Asia Stunting Initiative
Growth Monitoring - Screening Log for Children Under 5
</string>
    <string name="growthmonitoringscreeninglogforchildrenunder5_mainheading">Growth Monitoring - Screening Log for Children Under 5: Growth Monitoring  Screening Log for Children Under 5</string>
    <string name="casifollowupschu5_mainheading">casi follow-up S CHU5: casi followup S CHU5</string>
    <string name="growthmonitoringscreeninglogforwraspwslws_mainheading">Growth Monitoring - Screening Log for WRAs / PWs /LWs: Growth Monitoring  Screening Log for WRAs / PWs /LWs</string>
    <string name="growthmonitoringfollowupforwraspwslws_mainheading">Growth Monitoring - Follow-up for WRAs / PWs / LWs: Growth Monitoring  Followup for WRAs / PWs / LWs</string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available  </string>
    <string name="nap"> Not Applicable </string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees">  Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="contactnum">Contact Number </string>
    <string name="checkHHpresent"> The name of head of the household corresponds to the line listing data.</string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="cs01">Region (Drop down)</string>
    <string name="cs01a">District (Drop down)</string>
    <string name="cs01b">Tehsil (Drop down)</string>
    <string name="cs02">Place of Screening</string>
    <string name="cs0201">Facility </string>
    <string name="cs0202">Home Visit</string>
    <string name="cs0203">Community Outreach</string>
    <string name="cs03">Facility (enter nearest facility in case of home or outreach assessment) (Drop down)</string>
    <string name="cs04">Union Council (Drop down)</string>
    <string name="cs05">City / Village of residence (Drop down)</string>
    <string name="cs05a">Address / Nearby Landmark</string>
    <string name="cs06">Assessor’s designation</string>
    <string name="cs0601">CASI LHV</string>
    <string name="cs0602">Facility LHV/Staff</string>
    <string name="cs0603">LHW</string>
    <string name="cs0604">CHW</string>
    <string name="cs0605">CMW</string>
    <string name="cs06096">Other (Specify)</string>
    <string name="cs07">Assessor’s Name</string>
    <string name="cs08">Date of Screening</string>
    <string name="cs0801">DAY</string>
    <string name="cs0802">MONTH</string>
    <string name="cs0803">YEAR</string>
    <string name="cs09">LHW Khandan Number</string>
    <string name="cs10">Child Registration Number</string>
    <string name="cs10a">Child MR Number</string>
    <string name="cs11">Child Name</string>
    <string name="cs11a">Mother Name</string>
    <string name="cs12">Father’s Name</string>
    <string name="cs12a">Contact Number</string>
    <string name="cs13">Child’s gender</string>
    <string name="cs1301">Male</string>
    <string name="cs1302">Female</string>
    <string name="cs14">Child’s date of birth? Probe: What is (his/her) birthday?  If the mother/caretaker knows the exact date of birth, also record the day; otherwise, circle ‘98’ for day. Month and year must be recorded</string>
    <string name="cs1401">DAY</string>
    <string name="cs1402">MONTH</string>
    <string name="cs1403">YEAR</string>
    <string name="cs15">How old is (name)?                    Record age in completed years and months</string>
    <string name="cs1501">Age in completed years </string>
    <string name="cs1502">Age in completed Months </string>
    <string name="cs16">Birth weight (in Kilo grams) Record 99.9 if birth weight is not available</string>
    <string name="cs1698">Dont know</string>
    <string name="cs17">Have you ever exclusively breast fed your child?</string>
    <string name="cs1701">YES</string>
    <string name="cs1702">NO</string>
    <string name="cs18">Is the child being currently exclusively breast fed?</string>
    <string name="cs1801">YES</string>
    <string name="cs1802">NO</string>
    <string name="cs19">Is the child being given any complimentary feeding?  </string>
    <string name="cs1901">YES</string>
    <string name="cs1902">NO</string>
    <string name="cs20a">Counselling session done on breastfeeding?</string>
    <string name="cs20a01">YES</string>
    <string name="cs20a02">NO</string>
    <string name="cs20b">Counselling session done on complimentary feeding?</string>
    <string name="cs21">Height in cms.</string>
    <string name="cs20b01">Yes</string>
    <string name="cs20b02">No</string>
    <string name="cs22">Weight in Kgs.</string>
    <string name="cs23">MUAC in cms.</string>
    <string name="cs24">Assessment Outcome (Multiple Selection)</string>
    <string name="cs2401">Normal Growth</string>
    <string name="cs2402">Stunted (H/LAZ below –2 z score)	2 Growth faltering </string>
    <string name="cs2403">(H/LAZ between -1 &amp; - 2 z score)</string>
    <string name="cs2404">Under weight (WAZ below -2 z score)</string>
    <string name="cs2405">MAM WHZ (between -3 &amp; -2 z score)</string>
    <string name="cs2406">SAM WHZ (&lt; – 3 z score)</string>
    <string name="cs25">Action Required</string>
    <string name="cs2501">Referred</string>
    <string name="cs2502">Requires Counselling</string>
    <string name="cs2503">Requires Supplementation</string>
    <string name="cs2504">Refuse Referral </string>
    <string name="cs25a">Reason for Referral</string>
    <string name="cs25a01">Specify</string>
    <string name="cs25b">Place where referred </string>
    <string name="cs25b01">Specify</string>
    <string name="cs25c">Treatment provided at referred HF</string>
    <string name="cs25c01">Start RUTF for MAM</string>
    <string name="cs25c02">Hospitalization for SAM</string>
    <string name="cs25c096">Specify other</string>
    <string name="cs26">Supplementation provided</string>
    <string name="cs2601">ACHA MUM Roshan</string>
    <string name="cs2602">WAWA-MUM Ronaq</string>
    <string name="cs2603">Iron supplement bottles</string>
    <string name="cs2604">RUTF</string>
    <string name="cs2605">None</string>
    <string name="cs27">Quantity of Supplement provided Number of Sachets</string>
    <string name="cs2701">Sachet Acha Mum Roshan</string>
    <string name="cs2702">Sachet Wahwa-Mum Ronaq</string>
    <string name="cs2703">Sachet RUTF                                    </string>
    <string name="cs2704">Iron Supplement bottles                    </string>
    <string name="cs28">Any illnesses/complications reported in last one month</string>
    <string name="cs28a">Diarrhea</string>
    <string name="cs28a01">YES</string>
    <string name="cs28a02">NO</string>
    <string name="cs28b">Cough/Flu</string>
    <string name="cs28b01">YES</string>
    <string name="cs28b02">NO</string>
    <string name="cs28c">Fever</string>
    <string name="cs28c01">YES</string>
    <string name="cs28c02">NO</string>
    <string name="cs28d">Chest in drawing</string>
    <string name="cs28d01">YES</string>
    <string name="cs28d02">NO</string>
    <string name="cs28e">Worms in stool</string>
    <string name="cs28e01">YES</string>
    <string name="cs28e02"> NO</string>
    <string name="cs28f">Any other complication Specify </string>
    <string name="cs28f01">YES</string>
    <string name="cs28f02">NO</string>
    <string name="cs29">Any Medical or Surgical Illness </string>
    <string name="cs2901">YES</string>
    <string name="cs2902">NO</string>
    <string name="cs30">If yes, Specify</string>
    <string name="cs30a">Jaundice</string>
    <string name="cs30a01">YES</string>
    <string name="cs30a02">NO</string>
    <string name="cs30b">Pneumonia</string>
    <string name="cs30b01">YES</string>
    <string name="cs30b02">NO</string>
    <string name="cs30c">Typhoid</string>
    <string name="cs30c01">YES</string>
    <string name="cs30c02">NO</string>
    <string name="cs30d">Measles</string>
    <string name="cs30d01">YES</string>
    <string name="cs30d02">NO</string>
    <string name="cs30e">Infection</string>
</resources>