<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.casi_register.ui.login_activity.LoginActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg_color"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/loginProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/agakhan"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="12dp">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/glass_boarders"
                android:elevation="4dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:onClick="calcZ"
                    android:text="@string/signin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                    android:textColor="@color/colorSecondaryLight"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="24dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        style="@style/CardView"
                        android:layout_width="@dimen/_230sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:elevation="1dp"
                        app:cardCornerRadius="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="#f7f7f7"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="20dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/username"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    android:textColor="@color/blackOverlay"
                                    android:textSize="17sp"
                                    android:textStyle="bold" />


                                <EditText
                                    android:id="@+id/username"
                                    android:layout_width="match_parent"
                                    android:layout_height="?attr/actionBarSize"
                                    android:layout_gravity="center_horizontal"
                                    android:text="конунова"
                                    android:background="@color/white"
                                    android:drawableStart="@drawable/ic_username"
                                    android:drawablePadding="8dp"
                                    android:gravity="center_vertical"
                                    android:imeOptions="actionUnspecified"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:minWidth="280dp"
                                    android:paddingStart="12dp"
                                    android:paddingEnd="12dp"
                                    android:singleLine="true"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="20sp" />


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/password"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                        android:textColor="@color/blackOverlay"
                                        android:textSize="17sp"
                                        android:textStyle="bold" />

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="?attr/actionBarSize"
                                        android:elevation="1dp"
                                        android:orientation="horizontal"
                                        android:radius="2dp">

                                        <EditText
                                            android:id="@+id/password"
                                            android:text="конун465"
                                            android:layout_width="0dp"
                                            android:layout_height="match_parent"
                                            android:layout_gravity="center_horizontal"
                                            android:layout_weight="8"
                                            android:background="@color/white"
                                            android:drawableStart="@drawable/ic_lock_close"
                                            android:drawablePadding="8dp"
                                            android:elevation="1dp"
                                            android:imeActionLabel="Password"
                                            android:imeOptions="actionUnspecified"
                                            android:inputType="textPassword"
                                            android:maxLines="1"
                                            android:minWidth="280dp"
                                            android:paddingStart="12dp"
                                            android:paddingEnd="12dp"
                                            android:radius="2dp"
                                            android:singleLine="true"
                                            android:textColor="@color/colorPrimary"
                                            android:textSize="20sp" />

                                        <ImageButton
                                            android:id="@+id/showPassword"
                                            android:layout_width="0dp"
                                            android:layout_height="match_parent"
                                            android:layout_weight="2"
                                            android:background="@color/whiteOverlay"
                                            android:onClick="onShowPasswordClick"
                                            android:src="@drawable/ic_red_eye"
                                            android:textSize="20sp" />
                                    </LinearLayout>
                                </LinearLayout>


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="?attr/actionBarSize"
                                        android:elevation="1dp"
                                        android:orientation="horizontal"
                                        android:radius="2dp">

                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_height="match_parent"
                                            android:layout_weight="2"
                                            android:gravity="center"
                                            android:text="@string/country"
                                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                            android:textColor="@color/blackOverlay"
                                            android:textSize="20sp"
                                            android:textStyle="bold" />

                                        <ToggleButton
                                            android:id="@+id/countrySwitch"
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:checked="true"
                                            android:padding="10dp"
                                            android:radius="2dp"
                                            android:textColor="@color/colorSecondaryDark"
                                            android:textOff="@string/tajikistan"
                                            android:textOn="@string/pakistan"
                                            android:textSize="18sp" />

                                    </LinearLayout>

                                </LinearLayout>

                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/btnSignin"
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="16dp"
                                    android:layout_marginBottom="16dp"
                                    android:background="@drawable/outline_btn"
                                    android:onClick="onLoginClick"
                                    android:text="@string/btnLogin"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/syncData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="@color/blackOverlay"
                        android:drawableStart="@drawable/ic_download"
                        android:drawablePadding="12dp"
                        android:onClick="onSyncDataClick"
                        android:padding="12dp"
                        android:text="@string/btnDownloadData"
                        android:textColor="@color/whiteOverlay" />


                </LinearLayout>

                <TextView
                    android:id="@+id/txtinstalldate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"

                    android:gravity="end"
                    android:shadowColor="#55000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:text="Ver."
                    android:textColor="#7fefefef"
                    android:textSize="12sp" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</layout>